--- a/models/llms/mpt-7b-chat/Dockerfile
+++ b/models/llms/mpt-7b-chat/Dockerfile
@@ -8,7 +8,8 @@ RUN pip install -r requirements.txt
 
 COPY get_model.py get_model.py
 # # Get model weights and tokenizer
-RUN python3 get_model.py
+# RUN python3 get_model.py
+COPY --chown=user:user mpt-7b-chat-offline mpt-7b-chat-offline
 
 # Move the rest of the python files (most likely place layer cache will be invalidated)
 COPY --chown=user:user *.py .
