update dockerfiles to be buildable on version 20.10.25
- Update chainguard image to use latest (other tags are no longer
  supported)
- Updated base image to ensure the /home/$USER/app directory was created
  and chown'd correctly so future images would have permissions in the app/ directory

--- a/models/llms/mpt-7b-chat/Dockerfile
+++ b/models/llms/mpt-7b-chat/Dockerfile
@@ -11,7 +11,7 @@ COPY get_model.py get_model.py
 RUN python3 get_model.py
 
 # Move the rest of the python files (most likely place layer cache will be invalidated)
-COPY --chown=user:user *.py .
+COPY --chown=user:user *.py ./
 
 # Publish port
 EXPOSE 50051:50051
