update renovate config to batch all non minor updates for Go and Python

--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,35 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
+  ],
+  "packageRules": [
+    {
+      "groupName": "all non-major Go dependencies",
+      "groupSlug": "all-minor-go-patch",
+      "matchDatasources":[
+        "go"
+      ],
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ]
+    },
+    {
+      "groupName": "all non-major Python dependencies",
+      "groupSlug": "all-minor-python-patch",
+      "matchDatasources":[
+        "pypi"
+      ],
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ]
+    }
   ]
 }
