--- a/leapfrogai/requirements.txt
+++ b/leapfrogai/requirements.txt
@@ -4,7 +4,17 @@
 #
 #    pip-compile --output-file=leapfrogai/requirements.txt pyproject.toml
 #
-grpcio==1.56.0
+grpcio==1.58.0
+    # via
+    #   grpcio-health-checking
+    #   grpcio-reflection
+    #   leapfrogai (pyproject.toml)
+grpcio-health-checking==1.58.0
+    # via leapfrogai (pyproject.toml)
+grpcio-reflection==1.58.0
     # via leapfrogai (pyproject.toml)
 protobuf==4.23.3
-    # via leapfrogai (pyproject.toml)
+    # via
+    #   grpcio-health-checking
+    #   grpcio-reflection
+    #   leapfrogai (pyproject.toml)
