--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,12 @@ classifiers = [
     "Development Status :: 3 - Alpha",
 ]
 requires-python = ">=3.9"
-dependencies = ["grpcio >= 1.56.0", "protobuf >= 4.23.3"]
+dependencies = [
+    "grpcio >= 1.56.0",
+    "protobuf >= 4.23.3",
+    "grpcio-reflection >=1.58.0",
+    "grpcio-health-checking >=1.58.0",
+]
 
 [project.optional-dependencies]
 tests = ["pytest"]
