Swap pip with rye in the dockerfile

--- a/models/speech2text/whisper/Dockerfile
+++ b/models/speech2text/whisper/Dockerfile
@@ -3,7 +3,7 @@ FROM ghcr.io/defenseunicorns/leapfrogai/base:${IMAGE_TAG}
 # Install project
 # RUN curl -sSf https://rye-up.com/get | bash
 COPY --chown=user:user requirements.txt .
-RUN pip install -r requirements.txt
+RUN rye sync
 
 COPY --chown=user:user main.py .
 # COPY --chown=user:user get_model.py .
@@ -13,4 +13,4 @@ COPY --chown=user:user pyproject.toml .
 COPY --chown=user:user README.md .
 
 # Enjoy
-ENTRYPOINT ["python3", "main.py"]
+ENTRYPOINT ["rye", "run", "python", "main.py"]
