--- a/models/speech2text/whisper/Dockerfile
+++ b/models/speech2text/whisper/Dockerfile
@@ -1,9 +1,9 @@
 ARG IMAGE_TAG
 FROM ghcr.io/defenseunicorns/leapfrogai/base:${IMAGE_TAG}
 # Install project
-RUN curl -sSf https://rye-up.com/get | RYE_VERSION="0.4.0" RYE_INSTALL_OPTION="--yes" bash
+# RUN curl -sSf https://rye-up.com/get | bash
 COPY --chown=user:user requirements.txt .
-RUN rye sync
+RUN pip install -r requirements.txt
 
 COPY --chown=user:user main.py .
 # COPY --chown=user:user get_model.py .
@@ -13,4 +13,4 @@ COPY --chown=user:user pyproject.toml .
 COPY --chown=user:user README.md .
 
 # Enjoy
-ENTRYPOINT ["rye", "run", "python", "main.py"]
+ENTRYPOINT ["python3", "main.py"]
