Fixes some documentation

--- a/models/speech2text/whisper/Dockerfile
+++ b/models/speech2text/whisper/Dockerfile
@@ -1,3 +1,4 @@
+# Using this instead of chainguard due to whisper having a dependency on an incompatible Python version
 FROM python:3.11.6-bookworm
 
 # Install project
