Adds ffmpeg to the docker image

--- a/models/speech2text/whisper/Dockerfile
+++ b/models/speech2text/whisper/Dockerfile
@@ -1,6 +1,9 @@
 # Using this instead of chainguard due to whisper having a dependency on an incompatible Python version
 FROM python:3.11.6-bookworm
 
+RUN apt-get -y update
+RUN apt-get install -y ffmpeg
+
 # Install project
 COPY --chown=user:user requirements.txt .
 RUN pip3 install -r requirements.txt
