--- a/weaviate/manifests/secret.yaml
+++ b/weaviate/manifests/secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 stringData:
-  values.yaml: "###ZARF_VAR_CONTENTS###"
+  values.yaml: ###ZARF_VAR_CONTENTS###
 kind: Secret
 metadata:
   name: bigbang-###ZARF_CONST_NAME###-values
