--- a/models/speech2text/whisper/zarf.yaml
+++ b/models/speech2text/whisper/zarf.yaml
@@ -1,7 +1,7 @@
 kind: ZarfPackageConfig
 metadata:
   name: whisper
-  version: 0.3.1 # maybe this lives in the LF repo?
+  version: 0.0.4
   description: >
     whisper model
 
@@ -16,5 +16,5 @@ components:
     required: true
     import:
       name: model
-      url: oci://ghcr.io/defenseunicorns/packages/lfai-model:0.3.2-skeleton
+      url: oci://ghcr.io/defenseunicorns/leapfrogai/leapfrogai-model:0.3.3-skeleton
 
