Updates README.md files with docker instructions for easy deployments and updates DOCKERFILE's * Whisper, mpt-7b-chat, and api dockerfiles updated * Whisper updated to use chainguard images * README.md files updated for each installation

--- a/models/speech2text/whisper/Dockerfile
+++ b/models/speech2text/whisper/Dockerfile
@@ -1,18 +1,35 @@
-# Using this instead of chainguard due to whisper having a dependency on an incompatible Python version
-FROM python:3.11.6-bookworm
+FROM ghcr.io/defenseunicorns/leapfrogai/python:3.11-dev-amd64 as builder
 
-RUN apt-get -y update
-RUN apt-get install -y ffmpeg
+WORKDIR /leapfrogai
 
-# Install project
-COPY --chown=user:user requirements.txt .
-RUN pip3 install -r requirements.txt
+# Install python requirements
+COPY requirements.txt .
 
-COPY --chown=user:user main.py .
-COPY --chown=user:user .python-version .
+RUN pip install -r requirements.txt --user
 
-COPY --chown=user:user pyproject.toml .
-COPY --chown=user:user README.md .
+# Use ffmpeg image to get compiled binaries
+FROM cgr.dev/chainguard/ffmpeg:latest as ffmpeg
+
+WORKDIR /leapfrogai
+
+# Combine python libraries built in builder and ffmpeg binaries from ffmpeg into the final image
+FROM ghcr.io/defenseunicorns/leapfrogai/python:3.11-amd64
+
+WORKDIR /leapfrogai
+
+COPY --from=ffmpeg /usr/bin/ffmpeg /usr/bin
+COPY --from=ffmpeg /usr/bin/ffprobe /usr/bin
+COPY --from=ffmpeg /usr/lib/lib* /usr/lib
+COPY --from=builder /home/nonroot/.local/lib/python3.11/site-packages /home/nonroot/.local/lib/python3.11/site-packages
+
+COPY main.py .
+COPY .python-version .
+
+COPY pyproject.toml .
+COPY README.md .
+
+# Publish port
+EXPOSE 50052:50051
 
 # Enjoy
 ENTRYPOINT ["python3", "-u", "main.py"]
