change publish workflow to only trigger on tags
Update Makefile and workflows to no longer build the api image and zarf
package as that is now handled by a different repository

--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -2,8 +2,8 @@ name: Publish Artifacts
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - "*"
 
 jobs:
   images:
@@ -12,37 +12,14 @@ jobs:
     steps:
     - name: Check out code
       uses: actions/checkout@v2
+
     - name: Login to GHCR
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+
+    # build and push the base image
     - name: Run Makefile command
-      # just building, not pushing them
-      run: make base base-push api api-push
-  zarf:
-    runs-on: ubuntu-latest
-    needs: images
-    steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-    - name: Login to GHCR
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Install Zarf
-      uses: defenseunicorns/setup-zarf@main
-      with:
-        # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
-        version: v0.28.2
-        download-init-package: false
-    - name: Run Makefile command
-      run: make api base repeater
-    - name: Build Zarf Package
-      # just building, not pushing them
-      run: zarf package create . --confirm
-    - name: Publish Zarf Package
-      run: zarf package publish zarf-package-*.zst oci://ghcr.io/defenseunicorns/packages
+      run: make base base-push TAG=$GITHUB_REF_NAME
