--- a/chart/templates/namespace.yaml
+++ b/chart/templates/namespace.yaml
@@ -2,6 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    # TODO enable this
-    istio-injection: disabled
+    istio-injection: enabled
   name: leapfrogai
