--- a/chart/templates/api/configmap.yaml
+++ b/chart/templates/api/configmap.yaml
@@ -45,13 +45,13 @@ data:
             type = 'gRPC'   
 {{- end -}}
 {{ if .Values.models.whisper.enabled }}
-    [whisper-1]
-        [whisper-1.metadata]
+    [whisper]
+        [whisper.metadata]
             owned_by    = 'Defense Unicorns'
             permission  = []
             description = "OpenAI's Whisper Large v2"
             tasks = ["translate", "transcribe"]
-        [whisper-1.network]
+        [whisper.network]
             url = 'http://whisper:8000'
             type = 'http'     
 {{- end -}}
