update models to use model-skeleton 0.4.0

--- a/models/llms/ctransformers/zarf.yaml
+++ b/models/llms/ctransformers/zarf.yaml
@@ -6,15 +6,16 @@ metadata:
     ctransformers model
 
 constants:
-  - name: VERSION
-    value: "###ZARF_PKG_TMPL_VERSION###"
+  - name: IMAGE_VERSION
+    value: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
   - name: NAME
     value: "###ZARF_PKG_TMPL_NAME###"
+  - name: IMAGE_REPOSITORY
+    value: "###ZARF_PKG_TMPL_IMAGE_REPOSITORY###"
 
 components:
   - name: import-model
     required: true
     import:
       name: model
-      url: oci://ghcr.io/defenseunicorns/packages/lfai-model:0.3.4-skeleton
-
+      url: oci://ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-model:0.4.0-skeleton
