--- a/models/llms/ctransformers/zarf-config.yaml
+++ b/models/llms/ctransformers/zarf-config.yaml
@@ -2,7 +2,7 @@ package:
   create:
     set:
       image_repository: "ghcr.io/defenseunicorns/leapfrogai/ctransformers"
-      version: 0.3.2
+      image_version: 0.3.2
       name: ctransformers
     max_package_size: "1000000000"
   deploy:
@@ -13,6 +13,3 @@ package:
       requests_cpu: 1
       requests_memory: 4Gi
       requests_gpu: 0
-      name: ctransformers
-      image_repository: "ghcr.io/defenseunicorns/leapfrogai/ctransformers"
-      version: 0.3.2
