--- a/models/speech2text/whisper/zarf.yaml
+++ b/models/speech2text/whisper/zarf.yaml
@@ -6,15 +6,17 @@ metadata:
     whisper model
 
 constants:
-  - name: VERSION
-    value: "###ZARF_PKG_TMPL_VERSION###"
+  - name: IMAGE_VERSION
+    value: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
   - name: NAME
     value: "###ZARF_PKG_TMPL_NAME###"
+  - name: IMAGE_REPOSITORY
+    value: "###ZARF_PKG_TMPL_IMAGE_REPOSITORY###"
 
 components:
   - name: import-model
     required: true
     import:
       name: model
-      url: oci://ghcr.io/defenseunicorns/packages/lfai-model:0.3.4-skeleton
+      url: oci://ghcr.io/defenseunicorns/packages/leapfrgai/leapfrogai-model:0.4.0-skeleton
 
