--- a/models/text2vec/all-minilm-l6-v2/zarf-config.yaml
+++ b/models/text2vec/all-minilm-l6-v2/zarf-config.yaml
@@ -2,7 +2,7 @@ package:
   create:
     set:
       image_repository: "ghcr.io/defenseunicorns/leapfrogai/all-minilm-l6-v2"
-      version: 0.3.2
+      image_version: 0.3.2
       name: all-minilm-l6-v2
     max_package_size: "1000000000"
   deploy:
@@ -11,6 +11,3 @@ package:
       limits_memory: 4Gi
       requests_cpu: 1
       requests_memory: 4Gi
-      name: all-minilm-l6-v2
-      image_repository: "ghcr.io/defenseunicorns/leapfrogai/all-minilm-l6-v2"
-      version: 0.3.2
