--- a/zarf.yaml
+++ b/zarf.yaml
@@ -30,6 +30,15 @@ components:
     images:
       - "ghcr.io/defenseunicorns/leapfrogai/api:0.3.2"
       - "registry1.dso.mil/ironbank/kiwigrid/k8s-sidecar:1.23.3"
+    files:
+      - source: kubernetes/networking/
+        target: networking/
+    actions:
+      onDeploy:
+        after:
+          - cmd: kubectl apply -k networking
+        onSuccess:
+          - cmd: rm -rf networking
   - name: dcgm-exporter
     charts:
       - name: dcgm-exporter
