--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "leapfrogai"
-version = "0.3.3"
+version = "0.4.0-pre"
 
 description = "A tool for building gRPC-based model backends for LeapfrogAI"
 authors = [
@@ -23,6 +23,8 @@ dependencies = [
     "protobuf >= 4.23.3",
     "grpcio-reflection >=1.58.0",
     "grpcio-health-checking >=1.58.0",
+    "confz >= 2.0.1",
+    "pydantic < 2",
 ]
 
 [project.optional-dependencies]
