--- a/renovate.json
+++ b/renovate.json
@@ -1,36 +1,13 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ],
+  "extends": ["config:base"],
   "packageRules": [
-    {
-      "groupName": "all non-major Go dependencies",
-      "groupSlug": "all-minor-go-patch",
-      "matchDatasources":[
-        "go"
-      ],
-      "matchPackagePatterns": [
-        "*"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ]
-    },
     {
       "groupName": "all non-major Python dependencies",
       "groupSlug": "all-minor-python-patch",
-      "matchDatasources":[
-        "pypi"
-      ],
-      "matchPackagePatterns": [
-        "*"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ]
+      "matchDatasources": ["pypi"],
+      "matchPackagePatterns": ["*"],
+      "matchUpdateTypes": ["minor", "patch"]
     }
   ]
 }
