--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,7 +1,9 @@
 name: "mpt-7b-8k-chat"
-model_type: "mpt"
-trust_remote_code: true # defaults to false
-model_context_length: 8192
+model:
+  type: mpt
+  source: "./model"
+  trust_remote_code: true
+max_seq_len: 8192
 prompt_format:
   chat:
     system: "<|im_start|>system\n{}<|im_end|>\n"
