--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches:
       - "*"
-      
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,11 +16,14 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11.4'
+        python-version: '3.11.6'
         cache: 'pip'
 
     - name: install deps
       run: pip install -r requirements.txt pytest
+
+    - name: install module in editable mode
+      run: pip install -e .
 
     - name: Simple Test
       run: pytest
