--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,6 +6,27 @@ on:
       - "*"
 
 jobs:
+  build-39x:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v2
+
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '>=3.9 <3.10'
+        cache: 'pip'
+
+    - name: install deps
+      run: pip install -r requirements.txt pytest
+
+    - name: install module in editable mode
+      run: pip install -e .
+
+    - name: Simple Test
+      run: pytest
   build:
     runs-on: ubuntu-latest
     
@@ -16,7 +37,7 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11.6'
+        python-version-file: 'pyproject.toml'
         cache: 'pip'
 
     - name: install deps
