--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,7 +18,6 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '>=3.10 <3.11'
-        cache: 'pip'
 
     - name: install deps
       run: pip install -r requirements.txt pytest
@@ -29,6 +28,7 @@ jobs:
     - name: Tests
       run: make test
   build:
+    name: "Build on latest"
     runs-on: ubuntu-latest
     
     steps:
@@ -39,7 +39,6 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version-file: 'pyproject.toml'
-        cache: 'pip'
 
     - name: install deps
       run: pip install -r requirements.txt pytest
@@ -48,4 +47,4 @@ jobs:
       run: pip install -e .
 
     - name: Tests
-      run: pytest -v
+      run: make test
