--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Development Status :: 3 - Alpha",
 ]
-requires-python = ">=3.10 <3.12"
+requires-python = ">=3.10, <3.12"
 dependencies = [
     "grpcio >= 1.56.0",
     "protobuf >= 4.23.3",
