--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,11 @@ dependencies = [
     "grpcio-health-checking >=1.58.0",
     "confz >= 2.0.1",
     "pydantic < 2",
+    "click >= 8.1.7",
 ]
+
+[project.scripts]
+leapfrogai = "leapfrogai.cli:cli"
 
 [project.optional-dependencies]
 tests = ["pytest"]
