--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "leapfrogai"
-version = "0.4.0-pre"
+version = "0.4.0-rc.1"
 
 description = "A tool for building gRPC-based model backends for LeapfrogAI"
 authors = [{ name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" }]
