--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ temp/
 zarf-sbom/
 /values.yaml
 .pytest_cache
+*egg-info
+build/
+*.whl
 
 # local model and tokenizer files
 *.bin
@@ -23,6 +26,14 @@ tokenizer.json
 config.json
 generation_config.json
 vocabulary.json
+
+
+# Generated Code
+src/leapfrogai_api/types/audio
+src/leapfrogai_api/types/chat
+src/leapfrogai_api/types/completion
+src/leapfrogai_api/types/embeddings
+src/leapfrogai_api/types/name
 
 # go binaries
 api/main
