--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "pydantic >= 2.0",
     "click >= 8.1.7",
 ]
-requires-python = "==3.11.6"
+requires-python = "~=3.11"
 readme = "README.md"
 
 [project.optional-dependencies]
@@ -52,9 +52,12 @@ dev = [
 llama = [
     "llama-cpp-python == 0.2.28",
 ]
+
 vllm = [
     "pydantic >= 2.3.0",
     "vllm==0.3.2",
+    "python-dotenv>=1.0.1",
+    "aiostream>=0.5.2",
 ]
 
 [tool.pip-tools]
