refactor: migrate text-embeddings zarf config to the monorepo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,15 @@ vllm = [
     "aiostream>=0.5.2",
 ]
 
+text-embeddings = [
+    "InstructorEmbedding >= 1.0.1",
+    "torch == 2.1.2",
+    "numpy == 1.26.3",
+    "tqdm == 4.66.1",
+    "sentence-transformers == 2.2.2",
+    "transformers == 4.36.0",
+]
+
 [tool.pip-tools]
 generate-hashes = true
 
