--- a/packages/whisper/chart/values.yaml
+++ b/packages/whisper/chart/values.yaml
@@ -5,13 +5,13 @@
 replicaCount: 1
 
 image:
-  repository: "ghcr.io/defenseunicorns/leapfrogai/vllm"
+  repository: "ghcr.io/defenseunicorns/leapfrogai/whisper"
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: 0.0.1 #TODO: Validate this package version exists
 
 imagePullSecrets: []
-nameOverride: vllm
+nameOverride: whisper
 fullnameOverride: ""
 
 serviceAccount:
@@ -37,6 +37,8 @@ service:
   type: ClusterIP
   port: 50051
 
+gpuEnabled: false 
+
 resources: 
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
@@ -45,11 +47,11 @@ resources:
   limits:
     cpu: 0
     memory: 0
-    nvidia.com/gpu: 1
+    nvidia.com/gpu: 0
   requests:
     cpu: 0
     memory: 0
-    nvidia.com/gpu: 1
+    nvidia.com/gpu: 0
 
 autoscaling:
   enabled: false
