--- a/packages/api/zarf.yaml
+++ b/packages/api/zarf.yaml
@@ -4,7 +4,7 @@ kind: ZarfPackageConfig
 metadata:
   description: "LeapfrogAI"
   name: leapfrogai-api
-  version: 0.1.0
+  version: "###ZARF_PKG_TMPL_LEAPFROGAI_IMAGE_VERSION###"
   architecture: amd64
 
 constants:
