--- a/packages/llama/zarf.yaml
+++ b/packages/llama/zarf.yaml
@@ -1,7 +1,7 @@
 kind: ZarfPackageConfig
 metadata:
   name: llama
-  version: 0.0.1 
+  version: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
   description: >
     llama-cpp-python model
 
