--- a/packages/whisper/zarf.yaml
+++ b/packages/whisper/zarf.yaml
@@ -1,7 +1,7 @@
 kind: ZarfPackageConfig
 metadata:
   name: "whisper"
-  version: 0.0.1
+  version: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
   description: >
     whisper model
 
