chore: rename 'llama' references to llama-cpp-python

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ dev = [
     "huggingface_hub", #TODO: @JPERRY Figure out the sub modules (cli & hf_transfer)
 ]
 
-llama = [
+llama-cpp-python = [
     "llama-cpp-python == 0.2.28",
 ]
 
