--- a/packages/llama-cpp-python/zarf.yaml
+++ b/packages/llama-cpp-python/zarf.yaml
@@ -1,7 +1,7 @@
 kind: ZarfPackageConfig
 metadata:
-  name: llama
-  version: 0.0.1 
+  name: llama-cpp-python
+  version: 0.0.1
   description: >
     llama-cpp-python model
 
@@ -13,12 +13,12 @@ components:
   - name: import-model
     required: true
     charts:
-      - name: llama-model
+      - name: llama-cpp-python-model
         namespace: leapfrogai
         localPath: chart
-        releaseName: llama-model
+        releaseName: llama-cpp-python-model
         version: 0.0.1 #TODO: Validate this package version
         valuesFiles:
-          - "llama-values.yaml"
+          - "llama-cpp-python-values.yaml"
     images:
-      - ghcr.io/defenseunicorns/leapfrogai/llama:###ZARF_PKG_TMPL_IMAGE_VERSION###
+      - ghcr.io/defenseunicorns/leapfrogai/llama-cpp-python:###ZARF_PKG_TMPL_IMAGE_VERSION###
