chore: remove unused and irrelevant templates from charts
chore: add namespace to metadata of chart templates

--- a/packages/api/chart/templates/api/deployment.yaml
+++ b/packages/api/chart/templates/api/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-deployment
+  namespace: {{ .Release.Namespace }}
 spec:
   replicas: {{ .Values.api.replcias }}
   strategy:
@@ -66,7 +67,3 @@ spec:
       volumes:
       - name: api-model
         emptyDir: {}
-        
-
-    
-  
