--- a/packages/api/chart/templates/api/permissions.yaml
+++ b/packages/api/chart/templates/api/permissions.yaml
@@ -2,11 +2,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: read-configmaps
+  namespace: {{ .Release.Namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: read-configmaps
+  namespace: {{ .Release.Namespace }}
 rules:
 - apiGroups:
   - ""
@@ -22,6 +24,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: read-configmaps
+  namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
