--- a/packages/api/chart/templates/api/service.yaml
+++ b/packages/api/chart/templates/api/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api
+  namespace: {{ .Release.Namespace }}
   annotations:
     zarf.dev/connect-description: "Load the OpenAPI spec for the LFAI API"
     zarf.dev/connect-url: "/docs"
