--- a/packages/whisper/chart/templates/service.yaml
+++ b/packages/whisper/chart/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "chart.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   annotations:
     zarf.dev/connect-description: "{{ .Values.nameOverride }} gRPC endpoint."
   labels:
