chore: update all deployment strategies to RollingUpdate

--- a/packages/api/chart/templates/api/deployment.yaml
+++ b/packages/api/chart/templates/api/deployment.yaml
@@ -6,7 +6,9 @@ metadata:
 spec:
   replicas: {{ .Values.api.replcias }}
   strategy:
-    type: Recreate
+    rollingUpdate:
+      maxUnavailable: 0
+    type: RollingUpdate
   selector:
     matchLabels:
       app: api
